Explicit margins for headings and paragraphs.

--- a/main.css
+++ b/main.css
@@ -19,6 +19,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1, h2, h3, h4, h5, p {
+  margin-bottom: .75em;
+  margin-top: .75em;
+}
+
 h1 { font-size: 3rem; }
 h2 { font-size: 2.25rem; }
 h3 { font-size: 1.5rem; }
