--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 @import "normalize.css";
 :root {
-    --color-primary: #4484ce;
-    --color-secondary: #e44e40;
-    --color-neutral-light: #eee;
-    --color-neutral-dark: #0d0d0d;
+    --primary: #4484ce;
+    --secondary: #e44e40;
+    --neutral-light: #eee;
+    --neutral-dark: #0d0d0d;
 }
 
 *, *:before, *:after {
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  color: var(--color-neutral-dark);
+  color: var(--neutral-dark);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
@@ -68,7 +68,7 @@ a, .link {
   appearance: none;
   background-color: transparent;
   border: none;
-  color: color(var(--color-neutral-dark) l(60%));
+  color: color(var(--neutral-dark) l(60%));
   cursor: pointer;
   padding: 0;
   text-decoration: none;
@@ -81,7 +81,7 @@ p > a, p > .link  {
 
 .button {
   appearance: none;
-  background-color: var(--color-neutral-light);
+  background-color: var(--neutral-light);
   border: none;
   border-radius: 3px;
   display: inline-block;
@@ -90,26 +90,26 @@ p > a, p > .link  {
   transition: all 500ms;
 }
 .button:hover {
-  color: var(--color-neutral-light);
-  background-color: color(var(--color-neutral-dark) l(+ 20%));
+  color: var(--neutral-light);
+  background-color: color(var(--neutral-dark) l(+ 20%));
 }
 .button:focus, .button:active {
-  color: var(--color-neutral-light);
-  background-color: color(var(--color-neutral-light) l(- 20%));
+  color: var(--neutral-light);
+  background-color: color(var(--neutral-light) l(- 20%));
 }
 .button.primary {
-  color: var(--color-primary);
+  color: var(--primary);
 }
 .button.primary:hover {
-  background-color: color(var(--color-primary) l(- 2%));
-  color: var(--color-neutral-light);
+  background-color: color(var(--primary) l(- 2%));
+  color: var(--neutral-light);
 }
 .button.secondary {
-  color: var(--color-secondary);
+  color: var(--secondary);
 }
 .button.secondary:hover {
-  background-color: color(var(--color-secondary) l(- 2%));
-  color: var(--color-neutral-light);
+  background-color: color(var(--secondary) l(- 2%));
+  color: var(--neutral-light);
 }
 
 .button.small {
@@ -120,3 +120,12 @@ p > a, p > .link  {
   font-size: 1.15rem;
   padding: .75em 1.15em;
 }
+
+.text-right { text-align: right; }
+.text-center { text-align: center; }
+.text-left { text-align: left; }
+.text-muted { color: color(var(--neutral-dark) l(+ 20%)); }
+.upper { text-transform: uppercase; }
+.lower { text-transform: lowercase; }
+.bold { font-weight: bold; }
+.italic { font-style: italic; }
