--- a/main.css
+++ b/main.css
@@ -134,9 +134,14 @@ p > a, p > .link  {
 img.round { border-radius: 50em; }
 img.border { border: 3px solid var(--neutral-light); }
 
-.well {
-  background-color: var(--neutral-light);
+.well, .card {
+  background-color: color(var(--neutral-light) l(+ 5%));
   border-radius: 3px;
-  box-shadow: inset 0 0 3px rgba(0, 0, 0, .25);
   padding: .25em;
+}
+.well {
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, .25);
+}
+.card {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
 }
